style.css
.ubuntu-light {
    font-family: "Ubuntu", sans-serif;
    font-weight: 300;
    font-style: normal;
  }
  
  .ubuntu-regular {
    font-family: "Ubuntu", sans-serif;
    font-weight: 400;
    font-style: normal;
  }
  
  .ubuntu-medium {
    font-family: "Ubuntu", sans-serif;
    font-weight: 500;
    font-style: normal;
  }

h1{
  font-family: ubuntu-medium;
}

h2{
    font-family: unbuntu-regular;
}

p{
    font-family: unbuntu-light;
}



.big{
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(4, 1fr);
  column-gap: 30px;
  row-gap: 5px;
  max-width: 100%;
  object-fit: cover;
  grid-template-areas: 
    "img1 img2 img3 img4 title desc desc"
    "img5 img6 img7 img8 title desc desc"
    "img9 img10 img11 img12 title desc desc"
    "img13 img14 img15 img16 title desc desc"
    
  ;
}

#one{
  grid-area: img1;
}

#two{
  grid-area: img2;
}

#three{
  grid-area: img3;
}

#four{
  grid-area: img4;
}

#five{
  grid-area: img5;
}

#six{
  grid-area: img6;
}

#seven{
  grid-area: img7;
}

#eight{
  grid-area: img8;
}

#nine{
  grid-area: img9;
}

#ten{
  grid-area: img10;
}

#eleven{
  grid-area: img11;
}

#twelve{
  grid-area: img12;
}

#thirteen{
  grid-area: img13;
}

#fourteen{
  grid-area: img14;
}

#fifteen{
  grid-area: img15;
}

#sixteen{
  grid-area: img16;
}

#title{
  grid-area: title;
}

#desc{
  grid-area: desc;
}

.rec{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  column-gap: 30px;
  row-gap: 5px;
  max-width: 100%;
  object-fit: cover;
  grid-template-areas: 
  "img17 img18"
  "img19 img20"
  "img21 img22"
  "img23 img24"
  "img25 img26"
  "img27 img28"
  "img29 img30"
  "img31 img32"
  ;
}

#seventeen{
  grid-area: img17;
}

#nineteen{
  grid-area: img19;
}

#eighteen{
  grid-area: img18;
}

#twenty{
  grid-area: img20;
}

body{
  display: flex;
  justify-content: space-around;
}

